Use StandardCharsets.UTF-8 when possible, closes #34